# hub_games_rust

./: Cargo.toml  scores.sqlite
game1/: Cargo.toml
game1/src/: lib.rs
game2/: Cargo.toml
game3/: Cargo.toml
src/: main.rs
src/database/: sqlite.rs
src/models/: game.rs  mod.rs  score.rs  user.rs
ui/: Cargo.toml
ui/src/: lib.rs
